Fix alignment in top bar

--- a/etwin/src/styles/_tid-bar.scss
+++ b/etwin/src/styles/_tid-bar.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
   a {
     font-weight: bold;
     color: #d0d0d0;
